2008-08-25  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 549033 – Drop hard dependency on X, use Gdk instead (Cosimo
	Cecchi)

	* configure.ac: Fix the dependencies check for gnome-screenshot.

	* gnome-screenshot/screenshot-utils.[ch]: Drop the usage of
	X11 API wherever is possible and use GDK instead. We still need
	to use XShapeGetRectangles because GDK doesn't have a similar
	API.

	* gnome-screenshot/gnome-screenshot.c:
	(finish_prepare_screenshot): Update for the new internal API changes.

2008-08-10  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.ac: gnome-screenshot depends on GIO, so we need
	to add it to the dependencies.

2008-08-10  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.ac: Use the xext and xfixes pkg-config files to
	get the XShape and XFixes flags and libraries.

2008-06-28  Alejandro G. Castro <acastro@igalia.com>

	* configure.ac: Remove GnomeCanvas dependency of Baobab, we are
	not using it anymore

2008-04-28  Fabio Marzocca  <thesaltydog@gmail.com>

	* configure.ac: Preparing for Gio migration

2008-04-07  Matthias Clasen  <mclasen@redhat.com>

	* configure.ac: Check for XFixes

2008-03-07  Emmanuele Bassi  <ebassi@gnome.org>

	* baobab/data/baobab.desktop.in.in:
	* gfloppy/gfloppy.desktop.in:
	* gnome-dictionary/data/gnome-dictionary.desktop.in.in:
	* gnome-screenshot/gnome-screenshot.desktop.in:
	* gsearchtool/gnome-search-tool.desktop.in:
	* logview/gnome-system-log.desktop.in.in: Do not show the
	gnome-util components on KDE. (#431117 and #520913)

2007-09-18  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.ac: Drop the last gnomeprint references.

2007-09-06  Emmanuele Bassi  <ebassi@gnome.org>

	Merge the dictionary-work/git-svn branch

	* configure.ac: Bump up to 2.21.0 and begin the development
	cycle of gnome-utils.

	* ChangeLog.dictionary-work: Detailed ChangeLog for the
	merged dictionary-work/git-svn branch.

2007-09-06  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.in:
	* README:
	* NEWS: Release 2.19.92
