@@ -43,17 +43,11 @@ EXTRA_DIST = \
 	gnome-utils.spec \
 	omf.make \
 	xmldocs.make \
-	gnome-doc-utils.make \
-	intltool-extract.in \
-	intltool-merge.in \
-	intltool-update.in
+	gnome-doc-utils.make
 
 DISTCLEANFILES =                \
 	gtk-doc.make		\
-	gnome-doc-utils.make	\
-	intltool-extract        \
-	intltool-merge          \
-	intltool-update
+	gnome-doc-utils.make
 
 DISTCHECK_CONFIGURE_FLAGS = \
 	--disable-scrollkeeper \
