@@ -1,5 +1,10 @@
 2008-08-25  Emmanuele Bassi  <ebassi@gnome.org>
 
+	* Makefile.am: Remove files from EXTRA_DIST, for usage with
+	new intltool.
+
+2008-08-25  Emmanuele Bassi  <ebassi@gnome.org>
+
 	Bug 549033 – Drop hard dependency on X, use Gdk instead (Cosimo
 	Cecchi)
 
